# factory_pattern_animals_cpp

./: Animal.h  AnimalFactory.cpp  AnimalFactory.h  CMakeLists.txt  Cat.h  Dog.h  README.md  main.cpp
